--- a/LCD1in8/src/Fonts/CMakeLists.txt
+++ b/LCD1in8/src/Fonts/CMakeLists.txt
@@ -1,13 +1,16 @@
 cmake_minimum_required(VERSION 3.13)
 
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+
 add_library(Fonts STATIC
+  font8.c
   font12.c
   font16.c
   font20.c
   font24.c
-  font8.c
 )
 
 target_include_directories(Fonts PUBLIC
-  ${CMAKE_CURRENT_LIST_DIR}
+  ${PROJECT_SOURCE_DIR}/inc
 )
