--- a/LCD1in8/src/Fonts/CMakeLists.txt
+++ b/LCD1in8/src/Fonts/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.13)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(Fonts STATIC
+target_sources(LCD1in8 PRIVATE
   font8.c
   font12.c
   font16.c
@@ -11,6 +11,6 @@ add_library(Fonts STATIC
   font24.c
 )
 
-target_include_directories(Fonts PUBLIC
+target_include_directories(LCD1in8 PRIVATE
   ${PROJECT_SOURCE_DIR}/inc
 )
