conf: :wrench: enable color output for ninja

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ pico_sdk_init()
 # Add executable. Default name is the project name, version 0.1
 
 add_executable(color_picker color_picker.cpp)
-target_compile_options(color_picker PUBLIC -Wall -Wextra)
+target_compile_options(color_picker PUBLIC -Wall -Wextra -fdiagnostics-color=always)
 
 target_sources(color_picker PRIVATE
   display.cpp
